--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ctracker
+name: cTracker
 description: Local-only app to track owed change.
 
 environment:
@@ -9,13 +9,26 @@ dependencies:
     sdk: flutter
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  intl: ^0.20.2
   path_provider: ^2.0.10
   provider: ^6.0.5
+  shared_preferences: ^2.5.4
+  url_launcher: ^6.3.2
   uuid: ^4.5.2
 
 dev_dependencies:
   build_runner: ^2.4.11
   hive_generator: ^2.0.1
+  flutter_launcher_icons: ^0.14.4
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/icon.png"
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/brand.png
+    - assets/images/icon.png
+    - assets/images/splash.png
