--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: cTracker
+name: ctracker
 description: Local-only app to track owed change.
 
 environment:
@@ -7,6 +7,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_markdown: ^0.7.7+1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   intl: ^0.20.2
